added second and third blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
         <h3>My First Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam laborum laudantium accusamus distinctio! Asperiores ipsam qui reiciendis suscipit non blanditiis. Odio autem omnis atque culpa aliquid ratione dolores porro!</p>
     </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam laborum laudantium accusamus distinctio!
+            Asperiores ipsam qui reiciendis suscipit non blanditiis. Odio autem omnis atque culpa aliquid ratione dolores
+            porro!</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam laborum laudantium accusamus distinctio!
+            Asperiores ipsam qui reiciendis suscipit non blanditiis. Odio autem omnis atque culpa aliquid ratione dolores
+            porro!</p>
+    </div>
 </body>
-</html>
+</html> 
