--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
             Asperiores ipsam qui reiciendis suscipit non blanditiis. Odio autem omnis atque culpa aliquid ratione dolores
             porro!</p>
     </div>
+    
+        <h3>How to push a Simple code in git</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"a meaningful message"</li>
+            <li>git push</li>
+        </ol>
+    
 </body>
 </html> 
